--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,13 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- CORS -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>7.0.61</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Testing dependencies -->
         <dependency>
