--- a/src/main/resources/properties/persistence.properties
+++ b/src/main/resources/properties/persistence.properties
@@ -1,8 +1,13 @@
 #Database
 dataSource.username = postgres
 dataSource.password = 003343adaja
-dataSource.url = jdbc:postgresql://localhost:5432/spring-rest-template
+dataSource.url = jdbc:postgresql://localhost:5432/TibiaWeb
 dataSource.driverClassName = org.postgresql.Driver
+
+webCrawler.dataSource.username = postgres
+webCrawler.dataSource.password = 003343adaja
+webCrawler.datasource.url = jdbc:postgresql://localhost:5432/TibiaWebCrawler
+webCrawler.dataSource.driverClassName = org.postgresql.driver
 
 #Hibernate-properties
 hibernate.order_inserts = true
