--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.group.template</groupId>
-    <artifactId>Spring-Rest-Template</artifactId>
+    <artifactId>Tibia-Web</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencyManagement>
