added crawler database connectivity and new session factory. Yet to find out whether a new transaction manager needs to be added in PErsistenceConfig, as the original one seems to be linking with sessionFactory only

--- a/src/main/resources/properties/persistence.properties
+++ b/src/main/resources/properties/persistence.properties
@@ -6,7 +6,7 @@ dataSource.driverClassName = org.postgresql.Driver
 
 crawler.dataSource.username = postgres
 crawler.dataSource.password = 003343adaja
-crawler.dataSource.url = jdbc:postgresql://localhost:5432/TibiaWebCrawler
+crawler.dataSource.url = jdbc:postgresql://localhost:5432/tibiawebcrawler
 crawler.dataSource.driverClassName = org.postgresql.Driver
 
 #Hibernate-properties
