--- a/src/main/resources/properties/persistence.properties
+++ b/src/main/resources/properties/persistence.properties
@@ -1,13 +1,8 @@
 #Database
 dataSource.username = postgres
 dataSource.password = 003343adaja
-dataSource.url = jdbc:postgresql://localhost:5432/TibiaWeb
+dataSource.url = jdbc:postgresql://localhost:5432/tibiawebcrawler
 dataSource.driverClassName = org.postgresql.Driver
-
-crawler.dataSource.username = postgres
-crawler.dataSource.password = 003343adaja
-crawler.dataSource.url = jdbc:postgresql://localhost:5432/tibiawebcrawler
-crawler.dataSource.driverClassName = org.postgresql.Driver
 
 #Hibernate-properties
 hibernate.order_inserts = true
